[velux] eliminate mvn compiler warnings (#8606)
* [velux] remove redundant NonNullByDefault annotations